feat: insert the images in the containers

--- a/index.html
+++ b/index.html
@@ -5,9 +5,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Booleando</title>
     <link rel="stylesheet" href="./css/style.css"/>
-    
+
 </head>
 <body>
-    
+    <main>
+      <section class="section">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+
+
+              <!-- card item -->
+
+
+              <div class="card">
+                <span class="discount">-50%</span>
+                <button class="button">Sostenibilità</button>
+                <img src="img/1.webp">
+                <span class="like">&hearts;</span>
+              </div>
+
+
+              <!-- /card item -->
+
+
+            </div>
+            <div class="col">
+
+
+              <!-- card item -->
+
+
+              <div class="card">
+                <span class="discount">-30%</span>
+                <img src="img/2.webp">
+                <span class="like">&hearts;</span>
+              </div>
+
+
+              <!-- /card item -->
+
+
+            </div>
+            <div class="col">
+
+
+              <!-- card item -->
+
+
+              <div class="card">
+                <span class="discount">-30%</span>
+                <img src="img/3.webp">
+                <span class="like">&hearts;</span>
+              </div>
+
+
+              <!-- /card item -->
+
+
+            </div>
+            <div class="col">
+
+
+              <!-- card item -->
+
+
+              <div class="card">
+                <span class="discount">-50%</span> 
+                <button class="button">Sostenibilità</button>
+                <img src="img/4.webp">
+                <span class="like">&hearts;</span>
+              </div>
+
+
+              <!-- /card item -->
+
+
+            </div>
+            <div class="col">
+
+
+              <!-- card item -->
+
+
+              <div class="card">
+                <span class="discount"></span>
+                <img src="img/5.webp">
+                <span class="like">&hearts;</span>
+              </div>
+
+
+              <!-- /card item -->
+
+
+            </div>
+            <div class="col">
+
+
+              <!-- card item -->
+
+
+              <div class="card">
+                <button class="button">Sostenibilità</button>
+                <img src="img/6.webp">
+                <span class="like">&hearts;</span>
+              </div>
+
+
+              <!-- /card item -->
+
+
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 </body>
 </html>
