--- a/index.html
+++ b/index.html
@@ -8,117 +8,204 @@
 
 </head>
 <body>
-    <main>
-      <section class="section">
-        <div class="container">
-          <div class="row">
-            <div class="col">
-
-
-              <!-- card item -->
-
-
-              <div class="card">
-                <span class="discount">-50%</span>
-                <button class="button">Sostenibilità</button>
-                <img src="img/1.webp">
-                <span class="like">&hearts;</span>
+  <!-- Header -->
+  <header class="header">  
+    <nav class="container">
+      <ul>
+        <li><a href="">link</a></li>
+        <li><a href="">link</a></li>
+        <li><a href="">link</li>
+      </ul>
+      <div>
+        <img class="logo" src="./img/boolean-logo.png" alt="">
+      </div>
+      <ul>
+        <li><a href="">&hearts;</a></li>
+        <li><a href="">&hearts;</a></li>
+        <li><a href="">&hearts;</a></li>
+      </ul>
+    </div>
+  </header>
+  <!-- /Header -->
+  <!-- Main -->
+  <main>
+    <section>
+      <div class="container">
+        
+        <h1>
+          <!-- before -->
+          Ciao sono Boolando 
+          <!-- after -->
+        </h1>
+      </div>
+    </section>
+    <section class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <!-- Card -->
+            <div class="card">
+              <!-- Card image -->
+              <div class="card-image">
+                <img src="./img/1.webp" alt="" class="front">
+                <img src="./img/1b.webp" alt="" class="back">
+                <div class="like">&hearts;</div>
+                <div class="tags">
+                  <span class="discount">-50%</span>
+                  <span class="eco">Sostenibilità</span>
+                </div>
               </div>
-
-
-              <!-- /card item -->
-
-
-            </div>
-            <div class="col">
-
-
-              <!-- card item -->
-
-
-              <div class="card">
-                <span class="discount">-30%</span>
-                <img src="img/2.webp">
-                <span class="like">&hearts;</span>
+              <!-- /Card image -->
+               <!-- Card text -->
+              <div class="card-text">
+                <div class="brand">Levi's</div>
+                <h4>RELAXED FIT TEE UNISEX</h4>
+                <div class="price">
+                  <span>14,99&euro;</span>
+                  <del>29,99&euro;</del>
+                </div>
               </div>
-
-
-              <!-- /card item -->
-
-
+              <!-- /Card text -->
             </div>
-            <div class="col">
-
-
-              <!-- card item -->
-
-
-              <div class="card">
-                <span class="discount">-30%</span>
-                <img src="img/3.webp">
-                <span class="like">&hearts;</span>
+            <!-- /Card -->
+          </div>
+          <div class="col">
+            <!-- Card -->
+            <div class="card">
+              <!-- Card image -->
+              <div class="card-image">
+                <img src="./img/2.webp" alt="" class="front">
+                <img src="./img/2b.webp" alt="" class="back">
+                <div class="like">&hearts;</div>
+                <div class="tags">
+                  <span class="discount">-30%</span>
+                </div>
               </div>
-
-
-              <!-- /card item -->
-
-
-            </div>
-            <div class="col">
-
-
-              <!-- card item -->
-
-
-              <div class="card">
-                <span class="discount">-50%</span> 
-                <button class="button">Sostenibilità</button>
-                <img src="img/4.webp">
-                <span class="like">&hearts;</span>
+              <!-- /Card image -->
+               <!-- Card text -->
+              <div class="card-text">
+                <div class="brand">Levi's</div>
+                <h4>RELAXED FIT TEE UNISEX</h4>
+                <div class="price">
+                  <span>14,99&euro;</span>
+                  <del>29,99&euro;</del>
+                </div>
               </div>
-
-
-              <!-- /card item -->
-
-
+              <!-- /Card text -->
             </div>
-            <div class="col">
-
-
-              <!-- card item -->
-
-
-              <div class="card">
-                <span class="discount"></span>
-                <img src="img/5.webp">
-                <span class="like">&hearts;</span>
+            <!-- /Card -->
+          </div>
+          <div class="col">
+            <!-- Card -->
+            <div class="card">
+              <!-- Card image -->
+              <div class="card-image">
+                <img src="./img/3.webp" alt="" class="front">
+                <img src="./img/3b.webp" alt="" class="back">
+                <div class="like">&hearts;</div>
+                <div class="tags">
+                  <span class="discount">-30%</span>
+                </div>
               </div>
-
-
-              <!-- /card item -->
-
-
-            </div>
-            <div class="col">
-
-
-              <!-- card item -->
-
-
-              <div class="card">
-                <button class="button">Sostenibilità</button>
-                <img src="img/6.webp">
-                <span class="like">&hearts;</span>
+              <!-- /Card image -->
+               <!-- Card text -->
+              <div class="card-text">
+                <div class="brand">Levi's</div>
+                <h4>RELAXED FIT TEE UNISEX</h4>
+                <div class="price">
+                  <span>14,99&euro;</span>
+                  <del>29,99&euro;</del>
+                </div>
               </div>
-
-
-              <!-- /card item -->
-
-
+              <!-- /Card text -->
             </div>
+            <!-- /Card -->
+          </div>
+          <div class="col">
+            <!-- Card -->
+            <div class="card">
+              <!-- Card image -->
+              <div class="card-image">
+                <img src="./img/4.webp" alt="" class="front">
+                <img src="./img/4b.webp" alt="" class="back">
+                <div class="like">&hearts;</div>
+                <div class="tags">
+                  <span class="discount">-50%</span>
+                  <span class="eco">Sostenibilità</span>
+                </div>
+              </div>
+              <!-- /Card image -->
+               <!-- Card text -->
+              <div class="card-text">
+                <div class="brand">Levi's</div>
+                <h4>RELAXED FIT TEE UNISEX</h4>
+                <div class="price">
+                  <span>14,99&euro;</span>
+                  <del>29,99&euro;</del>
+                </div>
+              </div>
+              <!-- /Card text -->
+            </div>
+            <!-- /Card -->
+          </div>
+          <div class="col">
+            <!-- Card -->
+            <div class="card">
+              <!-- Card image -->
+              <div class="card-image">
+                <img src="./img/5.webp" alt="" class="front">
+                <img src="./img/5b.webp" alt="" class="back">
+                <div class="like">&hearts;</div>
+                <div class="tags">
+                </div>
+              </div>
+              <!-- /Card image -->
+               <!-- Card text -->
+              <div class="card-text">
+                <div class="brand">Levi's</div>
+                <h4>RELAXED FIT TEE UNISEX</h4>
+                <div class="price">
+                  <span>14,99&euro;</span>
+                  <del>29,99&euro;</del>
+                </div>
+              </div>
+              <!-- /Card text -->
+            </div>
+            <!-- /Card -->
+          </div>
+          <div class="col">
+            <!-- Card -->
+            <div class="card">
+              <!-- Card image -->
+              <div class="card-image">
+                <img src="./img/6.webp" alt="" class="front">
+                <img src="./img/6b.webp" alt="" class="back">
+                <div class="like">&hearts;</div>
+                <div class="tags">
+                  <span class="eco">Sostenibilità</span>
+                </div>
+              </div>
+              <!-- /Card image -->
+               <!-- Card text -->
+              <div class="card-text">
+                <div class="brand">Levi's</div>
+                <h4>RELAXED FIT TEE UNISEX</h4>
+                <div class="price">
+                  <span>14,99&euro;</span>
+                  <del>29,99&euro;</del>
+                </div>
+              </div>
+              <!-- /Card text -->
+            </div>
+            <!-- /Card -->
           </div>
         </div>
-      </section>
-    </main>
+      </div>
+    </section>
+  </main>
+  <!-- /Main -->
+  <!-- Footer -->
+  <footer></footer>
+  <!-- /Footer -->
 </body>
 </html>
